# dunjoneer

./: .travis.yml  CMakeLists.txt  FindIrrlicht.cmake.license  LICENSE  README.md  compile.sh
config/: dunjoneer.ini  floor.ini  player.ini
config/models/: floor.ini  player.ini
headers/: EntityList.hpp  IEntity.hpp  MovementUpdater.hpp  Object.hpp  Player.hpp  Settings.hpp
include/: colors.hh  customIrrlicht.h  customMacro.h  customMacro.hh  debug.h  debug.hh
inih/: INIReader.cpp
maps/: main.ini
media/: crystal.blend  crystal.ms3d
media/models/: player.ms3d
src/: EntityList.cpp  INIReader.cpp  MovementUpdater.cpp  Settings.cpp  main.cpp
src/entities/: Object.cpp  Player.cpp
